# astc_ldr_decode_bug

./: CMakeLists.txt  Makefile  README.md  astc_helpers.h  basisu.vcxproj  basisu.vcxproj.filters  basisu_tool.cpp  cmake_install.cmake  hdrloader.cpp
astc-encoder/: astcenc_entry.cpp
encoder/: basisu_astc_decomp.cpp  basisu_astc_decomp.h  basisu_bc7enc.cpp  basisu_enc - Copy.cpp  basisu_enc.cpp  basisu_enc.h  basisu_gpu_texture.cpp  basisu_uastc_enc.cpp
transcoder/: basisu.h
